[package]
name = "storage"
version = "0.1.0"
authors = ["742362144 <742362144@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redis-server"
path = "src/bin/server.rs"


[dependencies]
#redis-module = "0.11.0"
bitflags = "1.2"
enum-primitive-derive = "^0.1"
num-traits = "^0.2"
strum_macros = "0.19"
#failure = "0.1"
simple_logger = "1.3.0"
log = "0.4.8"
async-stream = "0.3.0"
atoi = "0.3.2"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"

byteorder = "1"
hashbrown = "0.1.8"
libc = "0.2.43"
libloading = "0.3"
spin = "0.4.7"


[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[build-dependencies]
bindgen = "0.54"
cc = "1.0"

[features]
default = []
experimental-api = []